--- a/src/style/main.css
+++ b/src/style/main.css
@@ -46,11 +46,9 @@
   height: 85%;
   position: absolute;
   bottom: 0;
-  background-image: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0)
-  );
+  background-image: linear-gradient(to top,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0));
 }
 
 /* Services */
@@ -61,7 +59,6 @@
   background-size: cover;
   margin-left: -50px;
   opacity: 15%;
-  /* margin-bottom: 200px; */
 }
 
 .service .container h6 {
@@ -78,7 +75,7 @@
 .product {
   text-align: center;
   background-color: #dadada;
-  height: 6000px;
+  margin-bottom: -12px;
 }
 
 .product h3 {
@@ -97,7 +94,6 @@
 }
 
 .product .card img:hover {
-  /* background-color: grey; */
   opacity: 70%;
 }
 
@@ -186,14 +182,15 @@ footer p {
   .service .bg {
     margin-left: 50px;
   }
+
   .service .container h6 {
     font-size: 25px;
     font-weight: 700;
   }
 
-  .product {
+  /* .product {
     height: 1080px;
-  }
+  } */
 
   .product .card h5 {
     font-size: 15px;
